Fix design header overflow

--- a/src/components/header/dropdown.m.scss
+++ b/src/components/header/dropdown.m.scss
@@ -31,13 +31,14 @@
   .dropdownContent {
     display: none;
     position: absolute;
+    top: calc(100% + 5px);
     top: 100%;
     left: 0;
     text-align: center;
     background-color: #000;
     min-width: 130px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+    z-index: 999;
 
     a {
       color: white;
