--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -12,7 +12,7 @@
   padding: 0 10px;
   box-sizing: border-box;
   z-index: 1;
-  overflow: hidden;
+  overflow: visible;
 
   .title {
     font-size: 24px;
